@@ -501,6 +501,7 @@ object Build
 
         val resources = Resources.empty
         val html_context = Presentation.html_context()
+        val seen_nodes_cache = Presentation.Entity_Cache.empty
 
         using(store.open_database_context())(db_context =>
           for ((_, (session_name, _)) <- presentation_chapters) {
@@ -509,7 +510,8 @@ object Build
             Presentation.session_html(
               resources, session_name, deps, db_context, progress = progress,
               verbose = verbose, html_context = html_context,
-              elements = Presentation.elements1, presentation = presentation)
+              elements = Presentation.elements1, presentation = presentation,
+              seen_nodes_cache = seen_nodes_cache)
           })
 
         val browser_chapters =
